--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,4 +1,9 @@
 extends layouts/main
 
 block content
-    p Change password 
+    .form-container
+        form(action=`/users${routes.changePassword}`, method="post") 
+            input(type="password" placeholder="0 Password" name="oldPassword")
+            input(type="password" placeholder="New Password" name="newPassword")
+            input(type="password" placeholder="Verify New Password" name="newPassword")
+            input(type="submit" value="Change Password")
