--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -2,3 +2,9 @@ extends layouts/main
 
 block content
     p edit video
+    .form-container
+        form(action=`/vidoes${routes.editVideo}` method="post")
+        input(type="text" placeholder="Title" name="title")
+        textarea(placeholder="Description" name="description")
+        input(type="submit" value="Update Video")
+    a.form-container__link--delete(href=`/videos${routes.deleteVideo}`) Delete Video
