--- a/views/join.pug
+++ b/views/join.pug
@@ -1,10 +1,10 @@
 extends layouts/main
 
 block content  
-    .form-container
-        form(action=routes.join method="post") 
+    .form__container
+        form(action=routes.join, method="post") 
             input(type="text" name="name" placeholder="Full Name")
-            input(type="email" name="email" placeholder="email")
+            input(type="email" name="email" placeholder="Email")
             input(type="password" name="password" placeholder="Password")
             input(type="password" name="password2" placeholder="Verify password")
             input(type="submit" value="Join Now")
