updated upload, login, join pages

--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,10 +2,10 @@ extends layouts/main
 
 block content
     .form-container
-        form(action=`/vidoes${routes.upload}`, method="post")
-            label(for="file") Video Fi le 
-            input(type="file" id="file" name="video") 
-            input(type="text" placeholder="Title" name="title")
-            textarea(placeholder="Description" name="description")
+        form(action=`/videos${routes.upload}`, method="post")
+            label(for="file") Video File 
+            input(type="file" id="file" name="video" required=true) 
+            input(type="text" placeholder="Title" name="title" required=true)
+            textarea(placeholder="Description" name="description" required=true)
             input(type="submit" value="Upload Video")
 
